sdk/tests/macros_fails/macros_spec_i32.stderr
error: unsupported type, only stellar-contract-sdk types support generics in contract functions
 --> tests/macros_fails/macros_spec_i32.rs:6:15
  |
6 | pub fn add(a: MyType<i32>, b: MyType<i32>) -> i8 {
  |               ^^^^^^

error: unsupported type, only stellar-contract-sdk types support generics in contract functions
 --> tests/macros_fails/macros_spec_i32.rs:6:31
  |
6 | pub fn add(a: MyType<i32>, b: MyType<i32>) -> i8 {
  |                               ^^^^^^
